<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:paddingBottom="@dimen/paddingBottom"
        tools:context=".ui.activity.LoginActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"></include>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_100"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            style="@style/custom_button_layout"
            android:layout_marginTop="@dimen/layout_margin_top_20"
            android:text="@string/Login"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="@dimen/layout_margin_top_15"
            android:onClick="true"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="@dimen/layout_margin_top_30"
            android:text="@string/new_to_places"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_large"
            android:textStyle="normal|bold"/>

        <Button
            android:id="@+id/btn_signup"
            style="@style/custom_button_layout"
            android:layout_marginTop="@dimen/layout_margin_top_15"
            android:text="@string/sign_up"/>

    </LinearLayout>


</ScrollView>