<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:paddingBottom="@dimen/paddingBottom"
        tools:context=".ui.activity.SignUpActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"></include>

        <TextView
            android:id="@+id/ProfileDetails_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="@dimen/layout_margin_top_20"
            android:gravity="center|center_vertical"
            android:text="@string/text_Profile_Details"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="normal|bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstname"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_20"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_pswd"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_new_sign_up"
            style="@style/custom_button_layout"
            android:text="@string/sign_up"
            android:layout_marginTop="@dimen/layout_margin_top_20"/>

    </LinearLayout>

</ScrollView>