<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
                 android:orientation="vertical"
                  android:paddingBottom="@dimen/paddingBottom"
                  tools:context=".ui.fragments.MyProfileFragment">
        <TextView
            android:id="@+id/ProfileDetails_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="@dimen/layout_margin_top_20"
            android:gravity="center|center_vertical"
            android:text="@string/text_Profile_Details"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_medium"
            android:textStyle="normal|bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_firstname"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_20"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_lastname"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:inputType="textPersonName"
                />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/text_Email_Id" />

           <TextView
               android:id="@+id/emaildisplay_textview"
               android:layout_width="match_parent"
               android:layout_height="58dp"
               android:layout_below="@+id/email_textview"
               android:layout_marginLeft="32dp"
               android:layout_marginRight="28dp"
               android:layout_marginTop="5dp"
               android:height="40dp"
               android:background="@drawable/custom_textinputlayout"
               android:textSize="@dimen/textsize_medium"/>
                
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_phone"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_radius"
            style="@style/custom_text_input_layout"
            android:layout_marginTop="@dimen/layout_margin_top_10"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/CustomTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/currentradius"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_edit_details"
            style="@style/custom_button_layout"
            android:text="@string/editdetails"
            android:layout_marginTop="@dimen/layout_margin_top_40"/>

    </LinearLayout>
</ScrollView>