<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/paddingBottom"
    tools:context=".ui.activity.ResetPasswordActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="@dimen/layout_margin_top_20"
        android:gravity="center|center_vertical"
        android:text="@string/resetpswd"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textsize_large"
        android:textStyle="normal|bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        style="@style/custom_text_input_layout"
        android:layout_marginTop="@dimen/layout_margin_top_20"
        app:errorTextAppearance="@style/MyErrorText"
        app:hintTextAppearance="@style/CustomTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_passcode"
        style="@style/custom_text_input_layout"
        android:layout_marginTop="@dimen/layout_margin_top_10"
        app:errorTextAppearance="@style/MyErrorText"
        app:hintTextAppearance="@style/CustomTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_input_passcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passcode"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/custom_text_input_layout"
        android:layout_marginTop="@dimen/layout_margin_top_10"
        app:errorTextAppearance="@style/MyErrorText"
        app:hintTextAppearance="@style/CustomTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_confirm_password"
        style="@style/custom_text_input_layout"
        android:layout_marginTop="@dimen/layout_margin_top_10"
        app:errorTextAppearance="@style/MyErrorText"
        app:hintTextAppearance="@style/CustomTextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm_pswd"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_passwordReset"
        style="@style/custom_button_layout"
        android:text="@string/resetpswd"
        android:layout_marginTop="@dimen/layout_margin_top_20"/>


</LinearLayout>
